sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__locked_sets__tests__snapshots__base_3_sample_1_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/locked_sets.rs
description: Strategy LockedSets executed on grid base_3_sample_1_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║  2  │     │  2  ║     │     │     ║     │     │     ║
    - ║   6 │  5  │     ║ 4   │  8  │  3  ║     │  1  │  7  ║
    - ║   9 │     │     ║   9 │     │     ║   9 │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  2  │  2  ║     │     │  2  ║     │  23 │  23 ║
    - ║   6 │   6 │     ║  1  │   6 │   6 ║  4  │     │  5  ║
    - ║ 789 │ 78  │  8  ║     │ 7   │   9 ║     │   9 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 12  │     ║     │     │     ║     │  2  │     ║
    - ║  3  │     │  4  ║     │     │  5  ║  6  │     │  8  ║
    - ║     │ 7   │     ║ 7 9 │ 7   │     ║     │   9 │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │ 12  │ 12  ║     │     │ 1   ║ 1   │  2  │     ║
    - ║ 45  │ 4   │  5  ║  5  │  3  │   6 ║     │ 4 6 │  9  ║
    - ║ 78  │ 78  │  8  ║ 7   │     │     ║  8  │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │     ║     │   3 │ 1 3 ║
    - ║     │  9  │     ║  8  │  2  │  4  ║  5  │   6 │     ║
    - ║ 7   │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │ 123 │     ║     │ 1   │ 1   ║ 1 3 │     │ 123 ║
    - ║ 45  │ 4   │  6  ║  5  │  5  │     ║     │  7  │     ║
    - ║  8  │  8  │     ║   9 │     │   9 ║  8  │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │  2  │     ║   3 │ 1   │ 1   ║ 1 3 │     │ 1 3 ║
    - ║ 4 6 │ 4 6 │  9  ║ 4   │ 4   │     ║     │  5  │     ║
    - ║  8  │  8  │     ║     │     │  8  ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │ 1   ║ 1 3 │     │     ║
    - ║ 45  │ 4   │  7  ║  2  │  9  │     ║     │  8  │  6  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  1  │     │  3  ║  6  │  5  │  7  ║  2  │     │  4  ║
    - ║     │  8  │     ║     │     │     ║     │   9 │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r0c0: delete candidate 2, because of: "
    - "r0c0: delete candidate 2, r1c0: delete candidate 2, r1c1: delete candidate 2, r1c2: delete candidate 2, r2c1: delete candidate 2, because of: "
    - "r1c0: delete candidate 7, r3c0: delete candidate 7, because of: "
    - "r1c2: delete candidate 2, r3c2: delete candidate 2, because of: "
    - "r1c4: delete candidate 7, because of: "
    - "r1c4: delete candidate 7, r2c3: delete candidate 7, because of: "
    - "r1c7: delete candidate 9, r2c7: delete candidate 9, because of: "
    - "r1c8: delete candidates 2,3, because of: "
    - "r2c1: delete candidate 7, r2c3: delete candidate 7, because of: "
    - "r3c0: delete candidate 7, r3c1: delete candidate 7, because of: "
    - "r3c1: delete candidate 4, r5c1: delete candidate 4, r6c1: delete candidate 4, because of: "
    - "r3c5: delete candidate 1, because of: "
    - "r3c5: delete candidate 1, r5c5: delete candidate 1, r6c5: delete candidate 1, because of: "
    - "r3c7: delete candidates 2,6, because of: "
    - "r4c8: delete candidate 1, because of: "
    - "r5c0: delete candidate 5, r5c1: delete candidate 1, r5c6: delete candidate 1, r5c8: delete candidate 1, because of: "
    - "r6c0: delete candidate 4, r6c1: delete candidate 4, r7c0: delete candidate 4, because of: "
    - "r6c3: delete candidate 4, because of: "
    - "r6c4: delete candidate 1, r6c5: delete candidate 1, because of: "
    - "r6c6: delete candidates 1,3, because of: "
    - "r7c0: delete candidate 4, because of: "
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │  2  ║     │     │     ║     │     │     ║
    - ║   6 │  5  │     ║ 4   │  8  │  3  ║     │  1  │  7  ║
    - ║   9 │     │     ║   9 │     │     ║   9 │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │  2  ║     │  23 │     ║
    - ║   6 │   6 │     ║  1  │   6 │   6 ║  4  │     │  5  ║
    - ║  89 │ 78  │  8  ║     │     │   9 ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 1   │     ║     │     │     ║     │  2  │     ║
    - ║  3  │     │  4  ║     │     │  5  ║  6  │     │  8  ║
    - ║     │     │     ║   9 │ 7   │     ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │ 12  │ 1   ║     │     │     ║ 1   │     │     ║
    - ║ 45  │     │  5  ║  5  │  3  │   6 ║     │ 4   │  9  ║
    - ║  8  │  8  │  8  ║ 7   │     │     ║  8  │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │     ║     │   3 │   3 ║
    - ║     │  9  │     ║  8  │  2  │  4  ║  5  │   6 │     ║
    - ║ 7   │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  23 │     ║     │ 1   │     ║   3 │     │  23 ║
    - ║ 4   │     │  6  ║  5  │  5  │     ║     │  7  │     ║
    - ║  8  │  8  │     ║   9 │     │   9 ║  8  │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │  2  │     ║   3 │     │     ║     │     │ 1 3 ║
    - ║   6 │   6 │  9  ║     │ 4   │     ║     │  5  │     ║
    - ║  8  │  8  │     ║     │     │  8  ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │ 1   ║ 1 3 │     │     ║
    - ║  5  │ 4   │  7  ║  2  │  9  │     ║     │  8  │  6  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  1  │     │  3  ║  6  │  5  │  7  ║  2  │     │  4  ║
    - ║     │  8  │     ║     │     │     ║     │   9 │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons: []
    actions:
      - position:
          row: 0
          column: 0
        deleteCandidates:
          - 2
  - reasons: []
    actions:
      - position:
          row: 0
          column: 0
        deleteCandidates:
          - 2
      - position:
          row: 1
          column: 0
        deleteCandidates:
          - 2
      - position:
          row: 1
          column: 1
        deleteCandidates:
          - 2
      - position:
          row: 1
          column: 2
        deleteCandidates:
          - 2
      - position:
          row: 2
          column: 1
        deleteCandidates:
          - 2
  - reasons: []
    actions:
      - position:
          row: 1
          column: 0
        deleteCandidates:
          - 7
      - position:
          row: 3
          column: 0
        deleteCandidates:
          - 7
  - reasons: []
    actions:
      - position:
          row: 1
          column: 2
        deleteCandidates:
          - 2
      - position:
          row: 3
          column: 2
        deleteCandidates:
          - 2
  - reasons: []
    actions:
      - position:
          row: 1
          column: 4
        deleteCandidates:
          - 7
  - reasons: []
    actions:
      - position:
          row: 1
          column: 4
        deleteCandidates:
          - 7
      - position:
          row: 2
          column: 3
        deleteCandidates:
          - 7
  - reasons: []
    actions:
      - position:
          row: 1
          column: 7
        deleteCandidates:
          - 9
      - position:
          row: 2
          column: 7
        deleteCandidates:
          - 9
  - reasons: []
    actions:
      - position:
          row: 1
          column: 8
        deleteCandidates:
          - 2
          - 3
  - reasons: []
    actions:
      - position:
          row: 2
          column: 1
        deleteCandidates:
          - 7
      - position:
          row: 2
          column: 3
        deleteCandidates:
          - 7
  - reasons: []
    actions:
      - position:
          row: 3
          column: 0
        deleteCandidates:
          - 7
      - position:
          row: 3
          column: 1
        deleteCandidates:
          - 7
  - reasons: []
    actions:
      - position:
          row: 3
          column: 1
        deleteCandidates:
          - 4
      - position:
          row: 5
          column: 1
        deleteCandidates:
          - 4
      - position:
          row: 6
          column: 1
        deleteCandidates:
          - 4
  - reasons: []
    actions:
      - position:
          row: 3
          column: 5
        deleteCandidates:
          - 1
  - reasons: []
    actions:
      - position:
          row: 3
          column: 5
        deleteCandidates:
          - 1
      - position:
          row: 5
          column: 5
        deleteCandidates:
          - 1
      - position:
          row: 6
          column: 5
        deleteCandidates:
          - 1
  - reasons: []
    actions:
      - position:
          row: 3
          column: 7
        deleteCandidates:
          - 2
          - 6
  - reasons: []
    actions:
      - position:
          row: 4
          column: 8
        deleteCandidates:
          - 1
  - reasons: []
    actions:
      - position:
          row: 5
          column: 0
        deleteCandidates:
          - 5
      - position:
          row: 5
          column: 1
        deleteCandidates:
          - 1
      - position:
          row: 5
          column: 6
        deleteCandidates:
          - 1
      - position:
          row: 5
          column: 8
        deleteCandidates:
          - 1
  - reasons: []
    actions:
      - position:
          row: 6
          column: 0
        deleteCandidates:
          - 4
      - position:
          row: 6
          column: 1
        deleteCandidates:
          - 4
      - position:
          row: 7
          column: 0
        deleteCandidates:
          - 4
  - reasons: []
    actions:
      - position:
          row: 6
          column: 3
        deleteCandidates:
          - 4
  - reasons: []
    actions:
      - position:
          row: 6
          column: 4
        deleteCandidates:
          - 1
      - position:
          row: 6
          column: 5
        deleteCandidates:
          - 1
  - reasons: []
    actions:
      - position:
          row: 6
          column: 6
        deleteCandidates:
          - 1
          - 3
  - reasons: []
    actions:
      - position:
          row: 7
          column: 0
        deleteCandidates:
          - 4
